@@ -150,6 +150,88 @@ describe shell:
           expect (run_spec (yaml)).to_output_containing (fail_1)
 
 
+  - describe succeed_while_containing:
+    - it diagnoses incompatible arguments:
+        expect (expect ("meh").to_succeed_while_containing "meh").to_error "Process expected"
+    - it displays actual and expected exit status on failure: |
+        yaml = preamble .. "(spawn 'exit 3').to_succeed_while_containing 'hell'"
+        expect (run_spec (yaml)).
+          to_output_matching ("expecting exit status 0, with output containing:\n" ..
+                           "%s*| hell\n" ..
+                           "%s*but got exit status 3, with output:\n" ..
+                           "%s*| \n")
+    - it displays actual and expected output on failure: |
+        yaml = preamble .. "(spawn 'printf hell').to_succeed_while_containing 'hello'"
+        expect (run_spec (yaml)).
+          to_output_matching ("expecting exit status 0, with output containing:\n" ..
+                           "%s*| hello\n" ..
+                           "%s*but got exit status 0, with output:\n" ..
+                           "%s*| hell\n")
+    - context with all_of failure:
+      - it displays all expected and actual output for exit status mismatch:
+          yaml = preamble ..
+                 "(spawn 'printf heaven+hell && exit 3')." ..
+                 "to_succeed_while_containing.all_of {'heaven+', '+hell'}"
+          expect (run_spec (yaml)).
+            to_output_matching ("expecting exit status 0, with output containing:\n" ..
+                             "%s*| heaven%+\n" ..
+                             "%s*and:\n" ..
+                             "%s*| %+hell\n" ..
+                             "%s*but got exit status 3, with output:\n" ..
+                             "%s*| heaven%+hell\n")
+      - it displays all expected and actual output for output mismatch:
+          yaml = preamble ..
+                 "(spawn 'printf hello').to_succeed_while_containing.all_of {'heaven+', 'hell+'}"
+          expect (run_spec (yaml)).
+            to_output_matching ("expecting exit status 0, with output containing:\n" ..
+                             "%s*| heaven%+\n" ..
+                             "%s*and:\n" ..
+                             "%s*| hell%+\n" ..
+                             "%s*but got exit status 0, with output:\n" ..
+                             "%s*| hello\n")
+    - context with any_of failure:
+      - it displays all expected and actual output for exit status mismatch:
+          yaml = preamble ..
+                 "(spawn 'printf hell && exit 3')." ..
+                 "to_succeed_while_containing.any_of {'heaven', 'hell'}"
+          expect (run_spec (yaml)).
+            to_output_matching ("expecting exit status 0, with output containing:\n" ..
+                             "%s*| heaven\n" ..
+                             "%s*or:\n" ..
+                             "%s*| hell\n" ..
+                             "%s*but got exit status 3, with output:\n" ..
+                             "%s*| hell\n")
+      - it displays all expected and actual output for output mismatch:
+          yaml = preamble ..
+                 "(spawn 'printf hello').to_succeed_while_containing.any_of {'heaven+', '+hell'}"
+          expect (run_spec (yaml)).
+            to_output_matching ("expecting exit status 0, with output containing:\n" ..
+                             "%s*| heaven%+\n" ..
+                             "%s*or:\n" ..
+                             "%s*| %+hell\n" ..
+                             "%s*but got exit status 0, with output:\n" ..
+                             "%s*| hello\n")
+
+    - context when called normally:
+      - it succeeds when the exit status and output match:
+          expect (spawn "printf '+hell$'").to_succeed_while_containing "hell$"
+      - it fails when the exit status mismatches:
+          yaml = preamble .. "(spawn 'printf hello && exit 3').to_succeed_while_containing 'hell'"
+          expect (run_spec (yaml)).to_output_containing (fail_1)
+      - it fails when the output mismatches:
+          yaml = preamble .. "(spawn 'printf hell').to_succeed_while_containing 'hello'"
+          expect (run_spec (yaml)).to_output_containing (fail_1)
+
+    - context when called with not_ prefix:
+      - it succeeds when the exit status mismatches:
+          expect (spawn "printf hell && exit 3").not_to_succeed_while_containing "hell"
+      - it succeeds when the output mismatches:
+          expect (spawn "printf hell").not_to_succeed_while_containing "hello"
+      - it fails when the output matches:
+          yaml = preamble .. "(spawn 'printf hello').not_to_succeed_while_containing 'hell'"
+          expect (run_spec (yaml)).to_output_containing (fail_1)
+
+
   - describe output:
     - it diagnoses incompatible arguments:
         expect (expect ("meh").to_output "meh").to_error "Process expected"
@@ -479,6 +561,88 @@ describe shell:
       - it fails when the output matches:
           yaml = preamble ..
                  "(spawn 'printf hello >&2').not_to_output_error_containing 'e'"
+          expect (run_spec (yaml)).to_output_containing (fail_1)
+
+
+  - describe fail_while_containing:
+    - it diagnoses incompatible arguments:
+        expect (expect ("meh").to_fail_while_containing "meh").to_error "Process expected"
+    - it displays actual and expected exit status on failure: |
+        yaml = preamble .. "(spawn 'printf >&2 hello').to_fail_while_containing 'hell'"
+        expect (run_spec (yaml)).
+          to_output_matching ("expecting non%-zero exit status, with error output containing:\n" ..
+                           "%s*| hell\n" ..
+                           "%s*but got exit status 0, with error:\n" ..
+                           "%s*| hello\n")
+    - it displays actual and expected output on failure: |
+        yaml = preamble .. "(spawn 'printf >&2 hell && exit 3').to_fail_while_containing 'hello'"
+        expect (run_spec (yaml)).
+          to_output_matching ("expecting non%-zero exit status, with error output containing:\n" ..
+                           "%s*| hello\n" ..
+                           "%s*but got exit status 3, with error:\n" ..
+                           "%s*| hell\n")
+    - context with all_of failure:
+      - it displays all expected and actual output for exit status mismatch:
+          yaml = preamble ..
+                 "(spawn 'printf >&2 heaven+hell')." ..
+                 "to_fail_while_containing.all_of {'heaven+', '+hell'}"
+          expect (run_spec (yaml)).
+            to_output_matching ("expecting non%-zero exit status, with error output containing:\n" ..
+                             "%s*| heaven%+\n" ..
+                             "%s*and:\n" ..
+                             "%s*| %+hell\n" ..
+                             "%s*but got exit status 0, with error:\n" ..
+                             "%s*| heaven%+hell\n")
+      - it displays all expected and actual output for output mismatch:
+          yaml = preamble ..
+                 "(spawn 'printf >&2 hell && exit 3').to_fail_while_containing.all_of {'heaven', 'hell'}"
+          expect (run_spec (yaml)).
+            to_output_matching ("expecting non%-zero exit status, with error output containing:\n" ..
+                             "%s*| heaven\n" ..
+                             "%s*and:\n" ..
+                             "%s*| hell\n" ..
+                             "%s*but got exit status 3, with error:\n" ..
+                             "%s*| hell\n")
+    - context with any_of failure:
+      - it displays all expected and actual output for exit status mismatch:
+          yaml = preamble ..
+                 "(spawn 'printf >&2 hello')." ..
+                 "to_fail_while_containing.any_of {'heaven', 'hell'}"
+          expect (run_spec (yaml)).
+            to_output_matching ("expecting non%-zero exit status, with error output containing:\n" ..
+                             "%s*| heaven\n" ..
+                             "%s*or:\n" ..
+                             "%s*| hell\n" ..
+                             "%s*but got exit status 0, with error:\n" ..
+                             "%s*| hello\n")
+      - it displays all expected and actual output for output mismatch:
+          yaml = preamble ..
+                 "(spawn 'printf >&2 hell && exit 3').to_fail_while_containing.any_of {'heaven', 'hello'}"
+          expect (run_spec (yaml)).
+            to_output_matching ("expecting non%-zero exit status, with error output containing:\n" ..
+                             "%s*| heaven\n" ..
+                             "%s*or:\n" ..
+                             "%s*| hello\n" ..
+                             "%s*but got exit status 3, with error:\n" ..
+                             "%s*| hell\n")
+
+    - context when called normally:
+      - it succeeds when the exit status and error output match:
+          expect (spawn "printf >&2 hello && exit 3").to_fail_while_containing "hell"
+      - it fails when the exit status mismatches:
+          yaml = preamble .. "(spawn 'printf >&2 hello').to_fail_while_containing 'hell'"
+          expect (run_spec (yaml)).to_output_containing (fail_1)
+      - it fails when the output mismatches:
+          yaml = preamble .. "(spawn 'printf >&2 hell && exit 3').to_fail_while_containing 'hello'"
+          expect (run_spec (yaml)).to_output_containing (fail_1)
+
+    - context when called with not_ prefix:
+      - it succeeds when the exit status mismatches:
+          expect (spawn "printf >&2 hello").not_to_fail_while_containing "hell"
+      - it succeeds when the output mismatches:
+          expect (spawn "printf >&2 hell && exit 3").not_to_fail_while_containing "hello"
+      - it fails when the output matches:
+          yaml = preamble .. "(spawn 'printf >&2 hello && exit 3').not_to_fail_while_containing 'hell'"
           expect (run_spec (yaml)).to_output_containing (fail_1)
 
 
